feat(impl):[TRI-670] fix code smells